--- a/kubernetes/erb/01_common-config.yaml.erb
+++ b/kubernetes/erb/01_common-config.yaml.erb
@@ -31,13 +31,16 @@ spec:
     tier: backend
     name: mongodb-deployment
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb
   namespace: default
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: kuberneteth
   template:
     metadata:
       name: mongodb-deployment
