--- a/kubernetes/erb/07_load_balancers.yaml.erb
+++ b/kubernetes/erb/07_load_balancers.yaml.erb
@@ -12,8 +12,7 @@ spec:
   selector:
     app: miner
     tier: backend
-  type: LoadBalancer
-  externalTrafficPolicy: Cluster
+  type: ClusterIP
   ports:
     - name: miner-jsonrpc
       protocol: TCP
