--- a/kubernetes/erb/03_nodes.yaml.erb
+++ b/kubernetes/erb/03_nodes.yaml.erb
@@ -60,6 +60,7 @@ metadata:
     tier: backend
     name: <%= @Node_UserIdent %>-svc
 spec:
+  type: NodePort
   selector:
     app: miner
     tier: backend
