--- a/kubernetes/erb/07_load_balancers.yaml.erb
+++ b/kubernetes/erb/07_load_balancers.yaml.erb
@@ -12,7 +12,7 @@ spec:
   selector:
     app: miner
     tier: backend
-  type: ClusterIP
+  type: NodePort
   ports:
     - name: miner-jsonrpc
       protocol: TCP
